# throwaway

./: .dockerignore  .editorconfig  .env  .envrc  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  Makefile.toml  README.md  Tiltfile  deny.toml  flake.nix  index-sort-f.html  index-sort-l.html  index.html  lib.rs.html  main.rs.html  makefile.toml  nix.Dockerfile  rust-toolchain.toml  rustfmt.toml  skaffold.yaml  sqlx-data.json  tilt.Dockerfile
.cargo/: audit.toml  config.toml
.github/: dependabot.yml
.nix/: overlay.nix
attributes/: core.rs.html  index.html  profile.rs.html
core/: cache.rs.html  config.rs.html  database.rs.html  index.html  logging.rs.html  migrations.rs.html  secrets.rs.html
docker/: command.sh  healthcheck.sh  migrations.sh
docs/: TODO.md
errors/: core.rs.html  credentials.rs.html  index.html  profile.rs.html  token.rs.html
extractors/: index.html  validated_json.rs.html
handlers/: config.rs.html  index.html  profile.rs.html  register.rs.html  token.rs.html  version.rs.html
helpers/: index.html  serialization.rs.html
middleware/: basic_authentication.rs.html  index.html  token_authentication.rs.html  version_header.rs.html
models/: claims.rs.html  index.html
nix/: postgresql.nix  sqlx-cli.nix
repositories/: index.html  profile.rs.html
scripts/: build.sh  compile.sh  coverage.sh  fmt-ci.sh  hot_reload.sh  lint.sh  security.sh  sql_prepare.sh  test.sh  test_integration.sh  test_unit.sh
services/: index.html  password.rs.html  profile.rs.html  token.rs.html
src/: index-detail-sort-f.html  index-detail-sort-l.html  index-detail.html  index-sort-f.html  index-sort-l.html  index.html  lib.rs  lib.rs.func-sort-c.html  lib.rs.func.html  lib.rs.gcov.html  main.rs  main.rs.func-sort-c.html  main.rs.func.html  main.rs.gcov.html
tests/: config_get_test.rs  config_get_test.rs.func-sort-c.html  config_get_test.rs.func.html  config_get_test.rs.gcov.html  index-detail-sort-f.html  index-detail-sort-l.html  index-detail.html  index-sort-f.html  index-sort-l.html  (+18 more)
(+450 files in other folders)
